--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <header class="header">
     <nav class="nav">
       <img src="img/logo.png" alt="Bankist logo" class="nav__logo" id="logo" />
+
+      <input type="checkbox" id='check'>
+      <label for="check" class="nav__icon"><svg>
+          <use xlink:href="img/icons.svg#icon-menu"></use>
+        </svg>
+      </label>
       <ul class="nav__links">
         <li class="nav__item">
           <a class="nav__link" href="#section--1">Features</a>
@@ -30,6 +36,7 @@
           <a class="nav__link nav__link--btn btn--show-modal" href="#">Open account</a>
         </li>
       </ul>
+
     </nav>
 
     <div class="header__title">
